[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/HopeGold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Menu.gd" type="Script" id=3]
[ext_resource path="res://images/witchhat.png" type="Texture" id=4]
[ext_resource path="res://assets/SceneTransition.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Button.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 31.0
margin_top = 20.0
margin_right = 193.0
margin_bottom = 106.0

[node name="TitleCard" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/TitleCard"]
margin_right = 94.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.341176, 0.27451, 0.439216, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Witch Game"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/HBoxContainer/TitleCard"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 17.0
margin_right = 94.0
margin_bottom = 29.0
custom_constants/separation = 12

[node name="Hat" type="TextureRect" parent="CenterContainer/HBoxContainer/TitleCard"]
margin_top = 33.0
margin_right = 94.0
margin_bottom = 86.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="VSeparator" type="VSeparator" parent="CenterContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 98.0
margin_right = 110.0
margin_bottom = 86.0
custom_constants/separation = 12

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 162.0
margin_bottom = 86.0
alignment = 1

[node name="Play" parent="CenterContainer/HBoxContainer/Buttons" instance=ExtResource( 6 )]
margin_top = 3.0
margin_bottom = 27.0

[node name="Options" parent="CenterContainer/HBoxContainer/Buttons" instance=ExtResource( 6 )]
margin_top = 31.0
margin_bottom = 55.0

[node name="Credits" parent="CenterContainer/HBoxContainer/Buttons" instance=ExtResource( 6 )]
margin_top = 59.0
margin_bottom = 83.0

[node name="SceneTransition" parent="." instance=ExtResource( 5 )]
mouse_filter = 2
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttons/Credits" to="." method="_on_Credits_pressed"]
